Another attempting to satiate memory errors