@@ -5,4 +5,14 @@ git clone https://github.com/lift/framework lift-framework
 cd lift-framework
 git checkout unified-parsers
 export SBT_OPTS="-Xms64M -Xmx256M -XX:MaxPermSize=512M"
-sbt publishLocal
+export SBT_CMD=publishLocal
+export SBT_JAR=${SBT_HOME}/bin/sbt-launch.jar
+
+${JAVA_HOME}/bin/java -ea -server ${JAVA_OPTS} ${SBT_OPTS}		\
+	-XX:+AggressiveOpts             		\
+	-XX:+OptimizeStringConcat			\
+	-XX:+UseConcMarkSweepGC               		\
+	-XX:+CMSParallelRemarkEnabled   		\
+	-XX:+CMSClassUnloadingEnabled   		\
+	-XX:+CMSIncrementalMode         		\
+	-jar project/${sbtjar} ${SBT_CMD}
